kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-service
  namespace: devops-app
  labels:
    app: devops-demo
spec:
  type: NodePort
  selector:
    app: devops-demo
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30100
    protocol: TCP
    name: http
